fix: break line on mobile for header 2

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,7 +8,7 @@
     <div class="text-primary flex flex-col gap-4">
       <h1 class="hidden">Transvego</h1>
       <h2 class="text-3xl md:text-6xl font-medium text-primary">
-        Nuestro Próximo Gran Paso
+        Nuestro Próximo{" "}<br class="md:hidden">{" "}Gran Paso
       </h2>
       <p class="text-sm md:text-lg">
         En este momento, estamos perfeccionando nuestro sitio web. Queremos que
