add: mobile gap

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -5,7 +5,7 @@
     class="flex flex-col items-center justify-center gap-10 mx-auto h-full text-center max-w-200 px-4 md:px-8"
   >
     <img src="/images/logos/primary.webp" alt="Transvego" class="w-56 md:w-80" />
-    <div class="text-primary flex flex-col gap-4">
+    <div class="text-primary flex flex-col gap-2 md:gap-4">
       <h1 class="hidden">Transvego</h1>
       <h2 class="text-3xl md:text-6xl font-medium text-primary">
         Nuestro Próximo{" "}<br class="md:hidden">{" "}Gran Paso
