--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,5 +1,5 @@
 <div
-  class="bg-[url(/images/hero.webp)] bg-cover bg-center bg-no-repeat h-screen"
+  class="bg-[url(/images/hero.webp)] bg-cover bg-center bg-no-repeat h-dvh"
 >
   <div
     class="flex flex-col items-center justify-center gap-10 mx-auto h-full text-center max-w-200 px-4 md:px-8"
